--- a/src/styles/searchview.css
+++ b/src/styles/searchview.css
@@ -1,32 +1,35 @@
 .container-wrapper {
   display: flex;
-  margin-left: 250px;
+  flex-wrap: wrap; /* Permite que los contenedores se envuelvan cuando no haya suficiente espacio */
+  justify-content: center; /* Centra los contenedores horizontalmente */
+  margin-left: 10px; /* Ajuste el margen izquierdo para dar espacio */
 }
 
 .container {
   background-color: rgb(213, 228, 228);
-  width: 375px;
-  height: 700px;
+  width: 90%; /* Utiliza el 90% del ancho del contenedor padre */
+  max-width: 375px; /* Establece un ancho máximo para asegurar que no se extienda demasiado en pantallas grandes */
   padding: 20px;
-  margin-left: 32px; /* Cambiado para dar espacio entre contenedores */
+  margin: 10px; /* Añade margen alrededor de cada contenedor */
+  overflow: hidden;
 }
 
 .title {
   color: black;
-  font-size: 23px;
+  font-size: 1.5rem; /* Tamaño de fuente relativo */
   margin-bottom: 10px;
 }
 
 .text {
   color: gray;
-  font-size: 14px;
+  font-size: 1rem; /* Tamaño de fuente relativo */
   margin-bottom: 10px;
 }
 
 .subtitle {
   color: black;
-  font-size: 16px;
-  margin-bottom: -30px;
+  font-size: 1.2rem; /* Tamaño de fuente relativo */
+  margin-bottom: -15px; /* Ajuste para la alineación vertical */
 }
 
 .avatar img {
@@ -46,7 +49,7 @@
   height: 50px;
   border-radius: 50%;
   object-fit: cover;
-  margin-right: -20px;
+  margin-right: -10px; /* Ajuste para evitar superposiciones */
 }
 
 .team-size {
@@ -61,11 +64,11 @@
   border-radius: 50%;
   background-color: red;
   color: white;
-  font-size: 14px;
+  font-size: 1rem; /* Tamaño de fuente relativo */
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-right: -20px;
+  margin-right: -10px; /* Ajuste para evitar superposiciones */
 }
 
 .progress-container {
@@ -75,7 +78,7 @@
 .progress-bar {
   position: relative;
   width: 100%;
-  height: 5px; /* Haciendo la línea más delgada */
+  height: 10px; /* Aumenta la altura de la barra de progreso para una mejor visibilidad */
   background-color: lightgray;
   border-radius: 5px;
   margin-top: 10px;
@@ -94,8 +97,8 @@
   position: absolute;
   top: 50%;
   transform: translateY(-50%);
-  width: 20px; /* Haciendo el punto o círculo más grande */
-  height: 20px; /* Haciendo el punto o círculo más grande */
+  width: 20px;
+  height: 20px;
   background-color: white;
   border: 2px solid green;
   border-radius: 50%;
@@ -103,7 +106,13 @@
 }
 
 .percentage {
-  font-size: 20px; /* Tamaño de fuente más grande */
-  cursor: pointer; /* Cambia el cursor al pasar por encima para indicar que es ajustable */
-  margin-left: 70px; /* Añadimos un espacio entre "Progress" y el porcentaje */
+  font-size: 1.2rem; /* Tamaño de fuente relativo */
+  cursor: pointer;
+  margin-left: 70px;
+}
+
+@media screen and (min-width: 768px) {
+  .container {
+    width: 45%; /* Utiliza el 45% del ancho del contenedor padre en pantallas medianas y grandes */
+  }
 }
